# dbus-settings-connect

./: .gitignore  client.cpp  main.cpp  meson.build  server.cpp  settings.cpp  settings.h  settings.json.h
generator/: StructGenerator.h  StructModel.h  main.cpp
subprojects/: nlohmann_json.wrap  nlohmann_json_schema_validator.wrap
tutorial/: client.cpp  dBusConnection.cpp  dBusConnection.h  server.cpp
